# ChangeLog for www-client/seamonkey-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.54 2008/09/28 13:17:27 maekke Exp $

  28 Sep 2008; Markus Meier <maekke@gentoo.org> seamonkey-bin-1.1.12.ebuild:
  amd64 stable, bug #238535

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  seamonkey-bin-1.1.12.ebuild:
  x86 stable wrt #238535

*seamonkey-bin-1.1.12 (24 Sep 2008)

  24 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.12.ebuild:
  Version bump

  04 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org>
  seamonkey-bin-1.1.11.ebuild:
  amd64 stable wrt security bug #231975

  18 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  seamonkey-bin-1.1.11.ebuild:
  stable x86, security bug 231975

*seamonkey-bin-1.1.11 (16 Jul 2008)

  16 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.11.ebuild:
  Version bump

  04 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  seamonkey-bin-1.1.10.ebuild:
  stable amd64, security bug 230567

  04 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  seamonkey-bin-1.1.10.ebuild:
  stable x86, security bug 230567

*seamonkey-bin-1.1.10 (02 Jul 2008)

  02 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.10.ebuild:
  Version bump

  26 Mar 2008; Markus Meier <maekke@gentoo.org> seamonkey-bin-1.1.9.ebuild:
  amd64/x86 stable, security bug #214816

  26 Mar 2008; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.8.ebuild,
  seamonkey-bin-1.1.9.ebuild:
  Fix HOMEPAGE, bug #214858

*seamonkey-bin-1.1.9 (26 Mar 2008)

  26 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.9.ebuild:
  Version bump

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.8.ebuild:
  Fix LICENSE, thanks to zlin

  11 Feb 2008; Olivier Crête <tester@gentoo.org>
  -seamonkey-bin-1.1.7.ebuild, seamonkey-bin-1.1.8.ebuild:
  Stable on amd64, security bug #208128, removing dangerous version
