@@ -1,6 +1,12 @@
 # ChangeLog for www-client/seamonkey-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.54 2008/09/28 13:17:27 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.55 2008/11/13 11:41:29 armin76 Exp $
+
+*seamonkey-bin-1.1.13 (13 Nov 2008)
+
+  13 Nov 2008; Raúl Porcel <armin76@gentoo.org>
+  +seamonkey-bin-1.1.13.ebuild:
+  Version bump
 
   28 Sep 2008; Markus Meier <maekke@gentoo.org> seamonkey-bin-1.1.12.ebuild:
   amd64 stable, bug #238535
